--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -9,6 +9,16 @@ spring:
     url: jdbc:mysql://localhost:3306/sampledb?serverTimezone=Asia/Seoul&characterEncoding=UTF-8
     username: root
     password: 1234
+  kafka:
+    bootstrap-servers: localhost:9092
+    consumer:
+      group-id: foo # server 1
+      # group-id: trip # server 2
+    template:
+      default-topic: chatroom
+  redis:
+    host: localhost
+    port: 6379
 
 # mybatis
 mybatis:
