--- a/src/main/reactfront/package.json
+++ b/src/main/reactfront/package.json
@@ -10,12 +10,14 @@
     "axios": "^1.7.7",
     "bootstrap": "^5.3.3",
     "http-proxy-middleware": "^3.0.2",
+    "net": "^1.0.2",
     "react": "^18.3.1",
     "react-bootstrap": "^2.10.5",
     "react-dom": "^18.3.1",
     "react-router-dom": "^6.27.0",
     "react-scripts": "5.0.1",
     "sockjs-client": "^1.6.1",
+    "stompjs": "^2.3.3",
     "web-vitals": "^2.1.4"
   },
   "proxy": "http://localhost:8080",
